ci/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: gitlab-managed-apps
  labels:
    app: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 33%
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: clyde.local:5005/taliesin/gui/master:prod
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: "/snippets/"
              name: file-server
          resources:
              requests:
                cpu: 100m
      volumes:
        - name: file-server
          persistentVolumeClaim:
            claimName: file-server-claim
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-dev
  namespace: gitlab-managed-apps
  labels:
    app: frontend-dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend-dev
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 33%
  template:
    metadata:
      labels:
        app: frontend-dev
    spec:
      containers:
        - name: frontend-dev
          image: clyde.local:5005/taliesin/gui/master:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: "/snippets/"
              name: file-server-dev
          resources:
              requests:
                cpu: 50m
      volumes:
        - name: file-server-dev
          persistentVolumeClaim:
            claimName: file-server-dev-claim
